Update and rename index.html to index.html

--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/es/" />
+<link rel="canonical" href="https://futbollibretv.net/home/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
@@ -19,7 +19,7 @@
 
 
 <meta property="og:title" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones"/><meta property="og:description" content="Ver fútbol libre de preocupaciones por anuncios a través de esta web. Sigue el minuto a minuto de los partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y la Liga 1, entre otros."/>
-<meta property="og:url" content="https://futbollibretv.net/es/" />
+<meta property="og:url" content="https://futbollibretv.net/home/" />
 <meta property="og:site_name" content="Fútbol Libre TV - Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
