--- a/pelota/index.html
+++ b/pelota/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/es/" />
+<link rel="canonical" href="https://futbollibretv.net/pelota/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
@@ -13,7 +13,7 @@
 <meta property="og:type" content="website" />
 	
 <meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/es/" />
+<meta property="og:url" content="https://futbollibretv.net/pelota/" />
 <meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
@@ -39,7 +39,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<title>Fútbol Libre TV - Ver partidos de fútbol y canales TNT Sports Premium, Fox Sports y ESPN online en VIVO y en DIRECTO</title>
+<title>Ver Fútbol Libre TV- Pelota Libre TV </title>
 
 
 
