--- a/pelota-libre/index.html
+++ b/pelota-libre/index.html
@@ -8,7 +8,7 @@
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
-<meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
+<meta name="description" content="Todo el fútbol Argentino e Internacional solo por pelota Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_MX" />
 <meta property="og:type" content="website" />
 	
@@ -74,8 +74,8 @@ Fútbol Libre TV
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
-<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead">Ver <strong>Libre Fútbol </strong> para todos.</h2>
+<p class="lead">Ver Fútbol Libre online a través del sitio pelota libre en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
+<h2 class="lead"><strong> VerLibre Fútbol </strong> para todos.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
