--- a/pelota-libre/index.html
+++ b/pelota-libre/index.html
@@ -7,7 +7,7 @@
 <link rel="canonical" href="https://futbollibretv.net/pelota/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
-	
+	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
 <meta name="description" content="Todo el fútbol Argentino e Internacional solo por pelota Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_MX" />
 <meta property="og:type" content="website" />
