--- a/pelota-libre/index.html
+++ b/pelota-libre/index.html
@@ -74,8 +74,8 @@ Fútbol Libre TV
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
-<p class="lead">Ver Fútbol Libre online a través del sitio pelota libre en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead"><strong> VerLibre Fútbol </strong> para todos.</h2>
+<p class="lead">Ver Fútbol Libre online a través del sitio web pelota libre en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
+<h2 class="lead"><strong> Fútbol libre gratis</strong> para todos los amantes de la Pelota.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
