--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -42,7 +42,79 @@
 </div>
 </center>
 
+<li class="FUT"><a href="#">
+Supercopa UEFA | Final: Real Madrid vs. Atalanta
+<span class="t">20:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9jbGFyb3ZpZGVvLmJsYWNrZG90d2FsbC53b3JsZC9zdHJlYW0ucGhwP3N0cmVhbT1zdGFycGx1czAx" target="_top">TV 1<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9jbGFyb3ZpZGVvLmJsYWNrZG90d2FsbC53b3JsZC9zdHJlYW0ucGhwP3N0cmVhbT1lc3BuMQ==" target="_top">TV 2<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9jbGFyb3ZpZGVvLmJsYWNrZG90d2FsbC53b3JsZC9zdHJlYW0ucGhwP3N0cmVhbT10dWRuX3VzYQ==" target="_top">TV 3<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9jbGFyb3ZpZGVvLmJsYWNrZG90d2FsbC53b3JsZC9zdHJlYW0ucGhwP3N0cmVhbT1mb3gxYXI=" target="_top">TV 4<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9jbGFyb3ZpZGVvLmJsYWNrZG90d2FsbC53b3JsZC9zdHJlYW0ucGhwP3N0cmVhbT1tb3Zpc3RhcmxpZ2FkZWNhbXBlb25lcw==" target="_top">TV 5<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1lc3Bu" target="_top">TV 6<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1mb3hzcG9ydHM=" target="_top">TV 7<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT10dWRu" target="_top">TV 8<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1saWdhZGVjYW1wZW9uZXMx" target="_top">TV 9<span>Calidad 720p</span></a></li>
+</ul>
+</li>
 
+
+
+<li class="LIB"><a href="#">
+Copa Libertadores: Peñarol vs. The Strongest
+<span class="t">23:00</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="SUD"><a href="#">
+Copa Sudamericana: Rosario Central vs. Fortaleza
+<span class="t">23:00</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="AR"><a href="#">
+Copa Argentina: Argentinos Juniors vs. Huracán
+<span class="t">23:00</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="LIB"><a href="#">
+Copa Libertadores: Talleres Córdoba vs. River Plate
+<span class="t">01:30</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="LIB"><a href="#">
+Copa Libertadores: Botafogo vs. Palmeiras
+<span class="t">01:30</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="SUD"><a href="#">
+Copa Sudamericana: Palestino vs. Medellín
+<span class="t">01:30</span></a>
+<ul>
+
+</ul>
+</li>
+
+<li class="SUD"><a href="#">
+Copa Sudamericana: LDU Quito vs. Lanús
+<span class="t">01:30</span></a>
+<ul>
+
+</ul>
+</li>
 
 </li>
 </ul>
