--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -43,7 +43,14 @@ LI<html>
 </center>
 
 
+<li class="SUD"><a href="#">
+Copa Sudamericana: Cruzeiro vs. Boca Juniors<span class="t">02:30</span></a>
+<ul>
+	<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1lc3Bu" target="_top">EVENTO<span>Calidad 720p</span></a></li>
 
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1kaXNuZXk1" target="_top">EVENTO<span>Calidad 720p</span></a></li>
+</ul>
+</li>
 
 
 </li>
