--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -43,12 +43,12 @@ LI<html>
 </center>
 
 
-<li class="SUD"><a href="#">
-Copa Sudamericana: Cruzeiro vs. Boca Juniors<span class="t">02:30</span></a>
+<li class="AR"><a href="#">
+Liga Profesional: Estudiantes vs. Boca Juniors<span class="t">01:00</span></a>
 <ul>
-	<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1lc3Bu" target="_top">EVENTO<span>Calidad 720p</span></a></li>
-
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9sYTEwaGQuY29tL3Zpdm8vY2FuYWwucGhwP3N0cmVhbT1kaXNuZXk1" target="_top">EVENTO<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDIucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_top">TV<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9lbi12aXZvLnByby9jYW5hbC5waHA/c3RyZWFtPWRpc25leTE=" target="_top">TV<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9lbi12aXZvLnByby9jYW5hbC5waHA/c3RyZWFtPWV2ZW50b3M=" target="_top">Sport TV1<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
