--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -42,15 +42,16 @@ LI<html>
 </div>
 </center>
 
-<li class="AR"><a href="#">
-Liga Profesional: Boca Juniors vs. Rosario Central<span class="t">02:00</span></a>
+<li class="ELIMINATORIAS_CONMEBOL"><a href="#">
+Eliminatorias Sudamericanas: Argentina vs. Chile<span class="t">02:00</span></a>
 <ul>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1lc3BuMQ==" target="_blank">TV<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1lc3BuX3ByZW1pdW0=" target="_blank">TV <span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAz" target="_blank">TV <span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10eWNfc3BvcnRz" target="_blank">TyC Sports<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10ZWxlZmU=" target="_blank">Tv<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9VFZQVUJMSUNB" target="_blank">TV Pública<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9RVNQTl9OTF8y" target="_blank">ESPN 2 NL<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1zcG9ydHZfMXB0" target="_blank">Sport TV1 PT<span>Calidad 720p</span></a></li>
 </ul>
 </li>
-
 
 
 </li>
