Update and rename index.html to index.html

--- a/tv1/index.html
+++ b/tv1/index.html
@@ -4,11 +4,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/home/" />
+<link rel="canonical" href="https://futbollibretv.net/tv1/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
-<meta name="description" content="Todo el fútbol Argentino e Internacional solo por pelota Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
+<meta name="description" content="Fútbol Libre es una página web que ofrece la visualización de diversas competencias deportivas de forma online y gratuita. Se destacaba mayormente por ofrecer partidos de fútbol locales e internacionales que en su mayoría pertenecen a paquetes de cable pagos."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_MX" />
 <meta property="og:type" content="website" />
 	<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
@@ -26,13 +26,13 @@
         window.protag.display("protag-sticky-bottom");
     });
 </script>
-<meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/home/" />
-<meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
+<meta property="og:title" content=Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados"/><meta property="og:description" content="Ver el fútbol Argentino y la Copa argentina gratis  por Fútbol Libre.  Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
+<meta property="og:url" content="https://futbollibretv.net/tv1/" />
+<meta property="og:site_name" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="Ver canales de futbol argentino online en vivo y en directo gratis, Liga Profesional de Fútbol, Copa Diego Maradona, Copa Argentina, Copa Libertadores, Sudamericana, River Plate y Boca Juniors" />
-<meta name="twitter:title" content="Fútbol Libre TV - Partidos y canales online en vivo y en directo" />
+<meta name="twitter:description" content="Fútbol Libre es una página web que ofrece la visualización de diversas competencias deportivas de forma online y gratuita. Se destacaba mayormente por ofrecer partidos de fútbol locales e internacionales que en su mayoría pertenecen a paquetes de cable pagos." />
+<meta name="twitter:title" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
 <meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -96,12 +96,12 @@ Fútbol Libre TV
         window.protag.display("protag-header");
     });
 </script>
-<p class="lead">Ver Fútbol online gratis a través del sitio web pelota libre en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead"><strong> Fútbol libre gratis</strong> para todos los amantes de la Pelota.</h2>
+<p class="lead">Disfruta del fútbol en vivo y gratis en Futbol Libre TV. Transmisiones de alta calidad de la Copa Libertadores, Copa Sudamericana, Liga 1 y más. ¡No te pierdas ningún partido! </p>
+<h2 class="lead"><strong>Fútbol libre para todos. Siempre.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/deportiva.html" frameborder="0" width="100%" height="420"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="/agenda/deportiva.html" frameborder="0" width="100%" height="420"></iframe>
 </div>
 <br />
 	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
@@ -306,10 +306,6 @@ Fútbol Libre TV
 	
 </div>	
 	<br />
-<h3>Bienvenido a Futbol Libre TV: Tu Fuente Segura y Legal para Ver Fútbol en Vivo</h3>
-	
-	<p>En <strong>Futbol Libre TV</strong>, nos dedicamos a ofrecer a los fanáticos del fútbol una experiencia única, segura y completamente legal para disfrutar de sus partidos favoritos en vivo. A diferencia de otros sitios que podrían exponer a sus usuarios a contenido de dudosa procedencia o riesgos de seguridad, nuestra plataforma se distingue por conectar exclusivamente con enlaces de fuentes oficiales y ampliamente reconocidas, como YouTube, Facebook y Twitter. Esto no solo garantiza una transmisión de alta calidad, sino que también asegura que estés disfrutando del fútbol sin preocuparte por problemas legales o interrupciones inesperadas.</p><h3>¿Qué es Futbol Libre TV?</h3><p>Futbol Libre TV es mucho más que una simple plataforma de transmisión; es tu puerta de entrada al mundo del fútbol en alta definición y en tiempo real. Nuestro sitio no almacena ni retransmite directamente contenido con derechos de autor. En cambio, curamos y organizamos enlaces seguros a transmisiones oficiales, permitiéndote acceder a los partidos que te interesan sin complicaciones y con la confianza de que estás en un entorno protegido.</p><h3>Cómo Funciona Futbol Libre TV</h3><p>Usar Futbol Libre TV es tan sencillo como seguir unos pocos pasos:</p><ol><li><strong>Acceso a la Plataforma:</strong> Simplemente visita nuestro sitio web desde cualquier dispositivo con acceso a internet.</li><li><strong>Selección de Partido:</strong> Explora nuestro calendario detallado de partidos para encontrar el juego que te interesa. Aquí encontrarás información completa sobre el evento, incluyendo la hora, el canal de transmisión y el estadio donde se llevará a cabo.</li><li><strong>Disfruta la Transmisión:</strong> Haz clic en el enlace proporcionado, que te llevará directamente a la fuente oficial de transmisión, ya sea en YouTube, Facebook u otras plataformas confiables. Todo esto sin anuncios emergentes molestos que puedan interrumpir tu experiencia.</li></ol><h3>Calendario Completo y Detallado de Partidos</h3><p>Uno de los pilares de Futbol Libre TV es nuestro <strong>calendario de partidos</strong>. Actualizado diariamente, este calendario te permite conocer no solo los encuentros del día, sino también aquellos programados para las próximas semanas. Cada entrada en nuestro calendario incluye información detallada sobre el partido, como:</p><ul><li><strong>Hora del Partido:</strong> Nunca te perderás un inicio, gracias a las precisas indicaciones horarias adaptadas a tu zona.</li><li><strong>Canal de Transmisión:</strong> Identifica rápidamente dónde se transmitirá el partido.</li><li><strong>Estadio y Equipos:</strong> Conoce todos los detalles esenciales, incluyendo el lugar del encuentro y los equipos que se enfrentarán.</li></ul><h3>Fuentes Oficiales y Contenido Seguro</h3><p>En Futbol Libre TV, tu seguridad es nuestra prioridad. Por eso, todos los enlaces que proporcionamos provienen de fuentes oficiales. Esto no solo asegura la calidad y estabilidad de la transmisión, sino que también protege tus dispositivos de posibles amenazas como malware o anuncios engañosos. Disfruta del fútbol sin riesgos, sabiendo que estás en un entorno controlado y seguro.</p><h3>¿Qué es Pelota Libre ?</h3><p><strong>Pelota Libre </strong>&nbsp;es una opción popular entre los fanáticos del fútbol que buscan ver sus partidos favoritos en alta definición y de manera gratuita. Esta plataforma ofrece una variedad de transmisiones en vivo, permitiendo a los usuarios seguir ligas y competiciones importantes de todo el mundo sin costo alguno. Aunque comparte algunas características con nuestra propuesta, Pelota Libre HD se enfoca en proporcionar transmisiones gratuitas, lo que puede conllevar ciertos riesgos de seguridad y calidad en comparación con la experiencia cuidadosamente curada y segura que ofrece Futbol Libre TV.</p><h3>¿Cómo Ver un Partido en Vivo en Pelota Libre?</h3><p>Para aquellos interesados en utilizar Pelota Libre HD, ver un partido en vivo es un proceso relativamente sencillo:</p><ol><li><strong>Accede a la Plataforma:</strong> Visita el sitio web de Pelota Libre&nbsp; desde tu dispositivo.</li><li><strong>Selecciona el Partido:</strong> Navega por la lista de transmisiones en vivo para encontrar el partido que deseas ver.</li><li><strong>Inicia la Reproducción:</strong> Haz clic en el enlace del partido y comienza a disfrutar de la transmisión en vivo. Es recomendable contar con una buena conexión a internet para evitar cortes o baja calidad de imagen.</li></ol><h3>¿Qué Partidos Transmite Pelota Libre ?</h3><p>Pelota Libre HD se distingue por ofrecer una amplia gama de partidos de fútbol, incluyendo:</p><ul><li><strong>Ligas Europeas:</strong> Desde la Premier League hasta La Liga, puedes seguir las principales competiciones del continente.</li><li><strong>Competiciones Internacionales:</strong> Sigue torneos como la UEFA Champions League y la Copa Libertadores.</li><li><strong>Ligas Sudamericanas y Torneos de Selecciones Nacionales:</strong> Mantente al tanto de las ligas más competitivas de Sudamérica y los emocionantes enfrentamientos entre selecciones.</li></ul><h3>Por Qué Elegir Futbol Libre TV para Ver Fútbol en Vivo</h3><p><strong>Futbol Libre TV</strong> se destaca en un mar de opciones por su enfoque en la <strong>seguridad</strong>, <strong>legalidad</strong> y <strong>calidad</strong>. Aquí no solo disfrutas de partidos de fútbol en vivo sin interrupciones, sino que lo haces con la tranquilidad de saber que estás utilizando una plataforma que respeta los derechos de autor y cuida la experiencia del usuario. Sin anuncios invasivos y con un calendario detallado que te mantiene al tanto de todos los encuentros importantes, somos la elección ideal para cualquier fanático del fútbol.</p><h3>Nuestra Misión: Hacerte Vivir el Mejor Fútbol</h3><p>En Futbol Libre TV, nuestra misión es simple: queremos que vivas la pasión del fútbol de la mejor manera posible. Al ofrecerte acceso seguro y legal a los partidos que amas, nos comprometemos a proporcionarte una experiencia sin igual, donde cada gol, pase y victoria se sientan tan reales como si estuvieras en el estadio.</p>
-<br />
 <p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
     </p>
 <!--p align="left"><h2>Preguntas frecuentes</h2></p><br />
