--- a/tv1/index.html
+++ b/tv1/index.html
@@ -9,7 +9,7 @@
 <meta name="referrer" content="always">
 	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
 <meta name="description" content="Fútbol Libre es una página web que ofrece la visualización de diversas competencias deportivas de forma online y gratuita. Se destacaba mayormente por ofrecer partidos de fútbol locales e internacionales que en su mayoría pertenecen a paquetes de cable pagos."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
-<meta property="og:locale" content="es_MX" />
+<meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
 	<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
 <script type="text/javascript">
@@ -116,7 +116,7 @@ Fútbol Libre TV
     });
 </script>
 			  
-<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estdeportes.telam.com.ar/html/v3/index.html?channel=deportes.futbol.copalpf&lang=es_LA' width='100%'></iframe>
+<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estaticopy.tigocloud.net/bo/html/v3/index.html?channel=deportes.futbol.primeraa&lang=es_LA' width='100%'></iframe>
 <br />
 <p class="display-5 text-center">Ver Canales de futbol online en vivo y en directo</p>
 <br />
