--- a/en-vivo/espn-1/index.html
+++ b/en-vivo/espn-1/index.html
@@ -106,7 +106,7 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
 <script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0"scrolling="auto" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0"scrolling="auto" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="https://streamtp1.com/global1.php?stream=espn1" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
                         </script>
 
 </div>
