--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -1,4 +1,4 @@
-LI<html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script type="text/javascript" src="/js/smallscripts.js"></script>
