--- a/en-vivo/espn-2/index.html
+++ b/en-vivo/espn-2/index.html
@@ -105,12 +105,8 @@ $("#navbar").load("../../html/navbar.html");
 <div class="row">
 <div class="col">
 <div class="card  box-shadow ">
-<div class="embed-responsive embed-responsive-16by9">
-<script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0"scrolling="auto" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
-                        </script>
-
-</div>
+  <div class="embed-responsive embed-responsive-16by9">
+                        <iframe allow="encrypted-media" src="https://streamtp1.com/global1.php?stream=espn2" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>                    </div>
 </div>
 </div>
 </div>
