--- a/en-vivo/espn-premium/index.html
+++ b/en-vivo/espn-premium/index.html
@@ -104,12 +104,8 @@ $("#navbar").load("../../html/navbar.html");
 <div class="row">
 <div class="col">
 <div class="card  box-shadow ">
-<div class="embed-responsive embed-responsive-16by9">
-<script type="text/javascript">
-                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('  <iframe allow="autoplay; encrypted-media" allowfullscreen=""scrolling="auto" frameborder="0" height="100%" id="iframe" marginheight="0" marginwidth="0" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" scrolling="no" src="https://www.youtube.com/embed/sPVnEflYrRQ?si=Hniioq7SOgVq5CY3" style="position: absolute;" width="100%"></iframe>')}
-                        </script>
-
-</div>
+  <div class="embed-responsive embed-responsive-16by9">
+                        <iframe allow="encrypted-media" src="https://streamtp1.com/global1.php?stream=espn_premium" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>                    </div>
 </div>
 </div>
 </div>
