--- a/tv1/index.html
+++ b/tv1/index.html
@@ -8,30 +8,16 @@
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
-<meta name="description" content="Fútbol Libre es una página web que ofrece la visualización de diversas competencias deportivas de forma online y gratuita. Se destacaba mayormente por ofrecer partidos de fútbol locales e internacionales que en su mayoría pertenecen a paquetes de cable pagos."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
+<meta name="description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
-	<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
-<script type="text/javascript">
-    window.protag = window.protag || { cmd: [] };
-    window.protag.config = { s:'futbollibretv.net', childADM: '22187115763', l: 'Arf30PQf' };
-    window.protag.cmd.push(function () {
-        window.protag.pageInit();
-    });
-</script>
-	<script type="text/javascript">
-    window.googletag = window.googletag || { cmd: [] };
-    window.protag = window.protag || { cmd: [] };
-    window.protag.cmd.push(function () {
-        window.protag.display("protag-sticky-bottom");
-    });
-</script>
-<meta property="og:title" content=Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados"/><meta property="og:description" content="Ver el fútbol Argentino y la Copa argentina gratis  por Fútbol Libre.  Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
+	
+<meta property="og:title" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC."/><meta property="og:description" content="Ver el fútbol Argentino y la Copa argentina gratis  por Fútbol Libre.  Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
 <meta property="og:url" content="https://futbollibretv.net/tv1/" />
-<meta property="og:site_name" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
+<meta property="og:site_name" content="Fútbol Libre TV - Ver canales de futbol argentino online en vivo y en directo gratis" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="Fútbol Libre es una página web que ofrece la visualización de diversas competencias deportivas de forma online y gratuita. Se destacaba mayormente por ofrecer partidos de fútbol locales e internacionales que en su mayoría pertenecen a paquetes de cable pagos." />
+<meta name="twitter:description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC." />
 <meta name="twitter:title" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
 <meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
@@ -96,8 +82,8 @@ Fútbol Libre TV
         window.protag.display("protag-header");
     });
 </script>
-<p class="lead">Disfruta del fútbol en vivo y gratis en Futbol Libre TV. Transmisiones de alta calidad de la Copa Libertadores, Copa Sudamericana, Liga 1 y más. ¡No te pierdas ningún partido! </p>
-<h2 class="lead"><strong>Fútbol libre para todos. Siempre.</h2>
+<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de stream para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros.  </p>
+<h2 class="lead">Ver<strong>Fútbol libre para todos.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
@@ -107,14 +93,6 @@ Fútbol Libre TV
 	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
 
 	
-<div id="protag-in_article_video"></div>
-<script type="text/javascript">
-    window.googletag = window.googletag || { cmd: [] };
-    window.protag = window.protag || { cmd: [] };
-    window.protag.cmd.push(function () {
-        window.protag.display("protag-in_article_video");
-    });
-</script>
 			  
 <iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estaticopy.tigocloud.net/bo/html/v3/index.html?channel=deportes.futbol.primeraa&lang=es_LA' width='100%'></iframe>
 <br />
@@ -306,22 +284,24 @@ Fútbol Libre TV
 	
 </div>	
 	<br />
-<p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
-    </p>
-<!--p align="left"><h2>Preguntas frecuentes</h2></p><br />
+
+<br/>
+	
+<p align="left"><h2>Preguntas frecuentes</h2></p><br/>
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
-<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales de televisión en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
+<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver un partido por fútbol libre TV en vivo y en directo?</h2></p>
-	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br /></div>
+	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver fútbol libre TV en vivo desde la computadora / PC o desde el celular?</h2></p>
-<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a futbollibretv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br /></div>
+<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a librefutboltv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br/></div>
 	
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
-<p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br /></div-->
+<p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br/></div>
+
 
 
 <br />
