--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/es/" />
+<link rel="canonical" href="https://futbollibretv.net/tv1/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
-	
-<meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
+	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
+<meta name="description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC."><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
 	
-<meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/es/" />
-<meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
+<meta property="og:title" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC."/><meta property="og:description" content="Ver el fútbol Argentino y la Copa argentina gratis  por Fútbol Libre.  Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
+<meta property="og:url" content="https://futbollibretv.net/tv1/" />
+<meta property="og:site_name" content="Fútbol Libre TV - Ver canales de futbol argentino online en vivo y en directo gratis" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="Ver canales de futbol argentino online en vivo y en directo gratis, Liga Profesional de Fútbol, Copa Diego Maradona, Copa Argentina, Copa Libertadores, Sudamericana, River Plate y Boca Juniors" />
-<meta name="twitter:title" content="Fútbol Libre TV - Partidos y canales online en vivo y en directo" />
+<meta name="twitter:description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC." />
+<meta name="twitter:title" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
 <meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<title>Fútbol Libre TV - Ver partidos de fútbol y canales TNT Sports Premium, Fox Sports y ESPN online en VIVO y en DIRECTO</title>
+<title>Ver Fútbol Libre TV- Pelota Libre TV </title>
 
 
 
@@ -74,27 +74,27 @@ Fútbol Libre TV
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
-<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead">Ver <strong>Libre Fútbol </strong> para todos.</h2>
+	 <center> <div id="protag-header"></div>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.protag = window.protag || { cmd: [] };
+    window.protag.cmd.push(function () {
+        window.protag.display("protag-header");
+    });
+</script>
+<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de stream para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros.  </p>
+<h2 class="lead">Ver<strong>Fútbol libre para todos.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="420"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="/agenda/deportiva.html" frameborder="0" width="100%" height="420"></iframe>
 </div>
 <br />
 	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
 
 	
-<div id="protag-in_article_video"></div>
-<script type="text/javascript">
-    window.googletag = window.googletag || { cmd: [] };
-    window.protag = window.protag || { cmd: [] };
-    window.protag.cmd.push(function () {
-        window.protag.display("protag-in_article_video");
-    });
-</script>
 			  
-<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estdeportes.telam.com.ar/html/v3/index.html?channel=deportes.futbol.copalpf&lang=es_LA' width='100%'></iframe>
+<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estaticopy.tigocloud.net/bo/html/v3/index.html?channel=deportes.futbol.primeraa&lang=es_LA' width='100%'></iframe>
 <br />
 <p class="display-5 text-center">Ver Canales de futbol online en vivo y en directo</p>
 <br />
@@ -285,46 +285,23 @@ Fútbol Libre TV
 </div>	
 	<br />
 
-<h1 id="futbollibre">Futbol Libre TV</h1>
-<p id="verfutbollibretvonlineenvivoyendirectocanalesgratisdestreamparaverpartidosdelfutbolargentinocopalibertadorescopasudamericanaychampionsleagueentreotros">Ver futbol libre TV online en vivo y en directo: Canales gratis de stream para ver partidos del futbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros</p>
-<p><img src="https://images.unsplash.com/opengraph/1x1.png?auto=format&fit=crop&w=1200&h=630&q=60&mark-w=64&mark-align=top%2Cleft&mark-pad=50&blend-w=1&mark=https%3A%2F%2Fimages.unsplash.com%2Fopengraph%2Flogo.png&blend=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1521731978332-9e9e714bdd20%3Fcrop%3Dfaces%252Cedges%26cs%3Dtinysrgb%26fit%3Dcrop%26fm%3Djpg%26ixid%3DM3wxMjA3fDB8MXxzZWFyY2h8NHx8ZnV0Ym9sfGVufDB8fHx8MTY4OTgzOTEyMXww%26ixlib%3Drb-4.0.3%26q%3D60%26w%3D1200%26auto%3Dformat%26h%3D630%26mark-w%3D750%26mark-align%3Dmiddle%252Ccenter%26blend-mode%3Dnormal%26blend-alpha%3D10%26mark%3Dhttps%253A%252F%252Fimages.unsplash.com%252Fopengraph%252Fsearch-input.png%253Fauto%253Dformat%2526fit%253Dcrop%2526w%253D750%2526h%253D84%2526q%253D60%2526txt-color%253D000000%2526txt-size%253D40%2526txt-align%253Dmiddle%25252Cleft%2526txt-pad%253D80%2526txt-width%253D660%2526txt-clip%253Dellipsis%2526txt%253Dfutbol%26blend%3D000000" style="display:none; max-width: 100% !important;"/>
-<h2 id="quesfutbollibretv">¿Qué es Futbol Libre ?</h2>
-<p><a href="https://futbollibretv.net/">Futbol Libre</a> es una plataforma en línea que ofrece canales gratuitos para ver partidos de fútbol en vivo y en directo. Con una amplia selección de canales, los aficionados al fútbol argentino y a los torneos internacionales como la Copa Libertadores, la Copa Sudamericana y la Champions League pueden disfrutar de los encuentros más emocionantes desde la comodidad de sus hogares. Además de los partidos de Boca Juniors y River Plate, también se transmiten los encuentros de la Selección Argentina y muchos otros eventos futbolísticos.</p>
-<h2 id="cmoverunpartidoporfutbollibretvenvivoyendirecto">¿Cómo ver un partido por Futbol Libre TV en vivo y en directo?</h2>
-<p>Para ver un partido en vivo y en directo a través de Futbol Libre TV, simplemente debes ingresar a su página web <a href="https://futbollibretv.net/">futbollibretv.net</a> y seleccionar el partido que deseas ver. Puedes encontrar los partidos en la agenda diaria o buscar el canal que transmitirá el encuentro en el momento del inicio. Una vez que hayas seleccionado el partido, podrás disfrutar de la transmisión en vivo sin interrupciones.</p>
-<h2 id="cmoverfutbollibretvenvivodesdelacomputadoraodesdeelcelular">¿Cómo ver Futbol Libre TV en vivo desde la computadora o desde el celular?</h2>
-<p>Ver Futbol Libre TV en vivo desde la computadora o desde el celular es muy sencillo. Si deseas disfrutar de los partidos desde tu computadora o PC, simplemente debes ingresar a <a href="https://futbollibretv.net/">futbollibretv.net</a> desde tu navegador y elegir el canal que deseas ver en directo. Por otro lado, si prefieres ver los partidos desde tu celular, puedes acceder a la página de Futbol Libre TV desde tu dispositivo Android o iPhone iOS y seleccionar el canal de tu preferencia. Esto te permitirá disfrutar de los partidos en cualquier momento y lugar.</p>
-<h2 id="qupartidosdeftboltransmitefutbollibre">¿Qué partidos de fútbol transmite Futbol Libre?</h2>
-<p>Futbol Libre TV ofrece una amplia variedad de partidos de fútbol que incluyen los encuentros del fútbol argentino, como los partidos de Boca Juniors y River Plate por el campeonato argentino. Además, se transmiten los partidos de la Copa Libertadores y la Copa Sudamericana, dos de los torneos más prestigiosos a nivel de clubes en Sudamérica. Esta plataforma también te brinda la posibilidad de disfrutar de los emocionantes encuentros de la Champions League, uno de los torneos más importantes a nivel de clubes en Europa. Con Futbol Libre TV, no te perderás ningún partido importante y podrás seguir de cerca a tus equipos favoritos.</p>
-<h2 id="preguntasfrecuentes">Preguntas frecuentes</h2>
-<p>A continuación, responderemos algunas preguntas frecuentes que los usuarios suelen tener sobre Futbol Libre TV.</p>
-<h3 id="culeslapginaweboficialdefutbollibretv">¿Cuál es la página web oficial de Futbol Libre TV?</h3>
-<p>La página web oficial de Futbol Libre TV es <a href="https://futbollibretv.net/">futbollibretv.net</a>. Desde esta plataforma, podrás acceder a todos los canales gratuitos en vivo y en directo para ver los partidos de fútbol que desees.</p>
-<h3 id="cuntocuestautilizarfutbollibretv">¿Cuánto cuesta utilizar Futbol Libre TV?</h3>
-<p>Futbol Libre TV es completamente gratuito. No es necesario realizar ningún pago para acceder a los canales y disfrutar de los partidos de fútbol en vivo.</p>
-<h3 id="qudispositivossoncompatiblesconfutbollibretv">¿Qué dispositivos son compatibles con Futbol Libre TV?</h3>
-<p>Futbol Libre TV es compatible con diferentes dispositivos. Puedes acceder a la plataforma desde tu computadora o PC, así como desde tu teléfono celular o tablet. Simplemente necesitas tener acceso a internet y podrás disfrutar de los partidos desde cualquier lugar.</p>
-<h3 id="puedoverlospartidosendiferido">¿Puedo ver los partidos en diferido?</h3>
-<p>Futbol Libre TV se especializa en la transmisión de partidos en vivo y en directo. Sin embargo, algunos canales pueden ofrecer repeticiones de los encuentros después de su finalización. Te recomendamos consultar la programación de los canales para verificar si alguna repetición está disponible.</p>
-
-<p>Futbol Libre TV es una excelente opción para todos los amantes del fútbol  que desean ver los partidos en vivo y en directo sin perderse ningún detalle. Con una amplia selección de canales gratuitos, podrás disfrutar de los encuentros más emocionantes del fútbol argentino, la Copa Libertadores, la Copa Sudamericana y la Champions League. Ya sea desde tu computadora o desde tu celular, Futbol Libre TV te brinda la posibilidad de seguir de cerca a tus equipos favoritos y vivir la pasión del fútbol desde la comodidad de tu hogar. No te pierdas ningún partido importante y únete a la comunidad de aficionados que disfrutan de Futbol Libre TV. ¡Ingresa a <a href="https://futbollibretv.net/">futbollibretv.net</a> y comienza a vivir la emoción del fútbol en vivo y en directo!</p>
-	<br />
-<p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
-    </p>
-<!--p align="left"><h2>Preguntas frecuentes</h2></p><br />
+<br/>
+	
+<p align="left"><h2>Preguntas frecuentes</h2></p><br/>
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
-<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales de televisión en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
+<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver un partido por fútbol libre TV en vivo y en directo?</h2></p>
-	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br /></div>
+	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver fútbol libre TV en vivo desde la computadora / PC o desde el celular?</h2></p>
-<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a futbollibretv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br /></div>
+<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a librefutboltv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br/></div>
 	
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
-<p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br /></div-->
+<p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br/></div>
+
 
 
 <br />
