--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/tv1/" />
+<link rel="canonical" href="https://libre.futbollibretv.net/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	<meta name="google-site-verification" content="jBFsvAA_l-nqY9nBfm4iKJu7CPcSl3x6LE1snP35XA4" />
@@ -13,13 +13,13 @@
 <meta property="og:type" content="website" />
 	
 <meta property="og:title" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC."/><meta property="og:description" content="Ver el fútbol Argentino y la Copa argentina gratis  por Fútbol Libre.  Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/tv1/" />
+<meta property="og:url" content="https://libre.futbollibretv.net/" />
 <meta property="og:site_name" content="Fútbol Libre TV - Ver canales de futbol argentino online en vivo y en directo gratis" />
-<meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
+<meta property="og:image" content="https://libre.futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC." />
 <meta name="twitter:title" content="Fútbol Libre: Transmisiones en Vivo, Noticias y Resultados" />
-<meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
+<meta name="twitter:image" content="https://libre.futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
@@ -290,13 +290,13 @@ Fútbol Libre TV
 <p align="left"><h2>Preguntas frecuentes</h2></p><br/>
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
-<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br/></div>
+<p align="left"><a href="https://libre.futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver un partido por fútbol libre TV en vivo y en directo?</h2></p>
-	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br/></div>
+	<p align="left"> Para ver <a href="https://libre.futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br/></div>
 	
 <div><p align="left"><h2>¿Cómo ver fútbol libre TV en vivo desde la computadora / PC o desde el celular?</h2></p>
-<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a librefutboltv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br/></div>
+<p align="left">Para poder ver <a href="https://libre.futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a librefutboltv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br/></div>
 	
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
@@ -318,7 +318,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://libre.futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2024 &copy; Todos los derechos reservados.</small>
