--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -43,15 +43,91 @@
 </center>
 
 <li class="AR"><a href="#">
-Liga Profesional: Boca Juniors vs. River Plate<span class="t">21:00</span></a>
+Liga Profesional: Vélez Sarsfield vs. Racing Club<span class="t">20:00</span></a>
 <ul>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1lc3BuX3ByZW1pdW0=" target="_blank">TV<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">TV<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly92b29kYy5jb20vZW1iZWQvODU4YTkzOGRhMjg4ODg5Mzg3OTk4Mzg4OTE4YTk4ODg4Njk5Lmh0bWw=" target="_blank">TV<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/en-vivo/espn-premium" target="_blank">ESPN Premium<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEz" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+	
+<li class="ES"><a href="#">
+LaLiga: Real Madrid vs. Villarreal<span class="t">21:00</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/espn-1" target="_blank">ESPN<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czAz" target="_blank">TV<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1tb3Zpc3RhcmxhbGlnYQ==" target="_blank">M+TV<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDIucGhwP3N0cmVhbT1lc3BuX2RlcG9ydGVz" target="_blank">ESPN Deportes USA<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9mb3JsZXNzbWFrZS5zdG9yZS9jb2JvLmh0bWw/aWQ9UFJFTUlFUl9TUE9SVFNfMl9JUkw=" target="_blank">Premier Sports 2 IRL<span>Calidad 720p</span></a></li>
 </ul>
 </li>
 
 
+<li class="URU"><a href="#">
+Primera División: Danubio vs. Defensor Sporting<span class="t">21:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA0" target="_blank">VTV+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA1" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+	<li class="AR"><a href="#">
+Liga Profesional: Gimnasia La Plata vs. Godoy Cruz<span class="t">22:30</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/tnt-sports" target="_blank">TNT Sports<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA3" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="AR"><a href="#">
+Liga Profesional: Newell's Old Boys vs. Lanús<span class="t">22:30</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/espn-premium" target="_blank">ESPN Premium<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+	<li class="URU"><a href="#">
+Primera División: Boston River vs. Wanderers<span class="t">23:30</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA0" target="_blank">VTV+<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEw" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="COSTARICA"><a href="#">
+Primera División: Guanacasteca vs. Pérez Zeledón<span class="t">00:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mdXR2" target="_blank">FUTV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+	<li class="AR"><a href="#">
+Liga Profesional: Instituto vs. San Lorenzo<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="/en-vivo/tnt-sports" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+
+<li class="MEX"><a href="#">
+Liga MX: Tigres UANL vs. Puebla<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1henRlY2FfZGVwb3J0ZXM=" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="MEX"><a href="#">
+Liga MX: Atlético San Luis vs. Monterrey<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czEx" target="_blank">TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
+
+<li class="MEX"><a href="#">
+Liga MX: Cruz Azul vs. Necaxa<span class="t">01:00</span></a>
+<ul>
+<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT10dWRuX3VzYQ==" target="_blank"TV<span>Calidad 720p</span></a></li>
+</ul>
+</li>
 
 </ul>
 </div>
