--- a/agenda/deportiva.html
+++ b/agenda/deportiva.html
@@ -60,22 +60,7 @@ Primera División: Emelec vs. Aucas<span class="t">00:00</span></a>
 </ul>
 </li>
 
-<li class="COSTARICA"><a href="#">
-Primera División: Deportivo Saprissa vs. Puntarenas<span class="t">00:00</span></a>
-<ul>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cC5saXZlL2dsb2JhbDEucGhwP3N0cmVhbT1mdXR2" target="_blank">FUTV<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly92b29kYy5jb20vZW1iZWQvODU4YTkzOGY5Yjg5ODU5MTg3OTk4Mzg4OTE4Nzk4ODg4Mzk0Lmh0bWw=" target="_blank">TV<span>Calidad 720p</span></a></li>
-</ul>
-</li>
 
-<li class="COL"><a href="#">
-Liga Betplay: Santa Fe vs Rionegro Águilas<span class="t">00:10</span></a>
-<ul>
-<li class="subitem1"><a href="/en-vivo/win-sports-premium" target="_blank">Win Sports +<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/win-sports-premium" target="_blank">Win Sports + (Opción 2)<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly92b29kYy5jb20vZW1iZWQvODU4YTkzOGY5Yjg5ODU5Nzg3OTk4Mzg4OTE4Yjk4ODg4Mzk3Lmh0bWw=" target="_blank">TV<span>Calidad 720p</span></a></li>
-</ul>
-</li>
 
 <li class="CH"><a href="#">
 Primera División: Colo-Colo vs. Audax Italiano<span class="t">01:00</span></a>
@@ -97,7 +82,7 @@ Primera División: Sportivo Ameliano vs. Nacional Asunción<span class="t">01:00
 Liga Profesional: Boca Juniors vs. Argentinos Juniors<span class="t">02:00</span></a>
 <ul>
 <li class="subitem1"><a href="/en-vivo/espn-1" target="_blank">ESPN<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/tnt-sports" target="_blank">TNT Sports<span>Calidad 720p</span></a></li>
+<li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT10bnRzcG9ydHNfYXJnZW50aW5h" target="_blank">TV sports<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly9zdHJlYW10cDEuY29tL2dsb2JhbDEucGhwP3N0cmVhbT1zdGFycGx1czA4" target="_blank">TV<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/embed/eventos?r=aHR0cHM6Ly92b29kYy5jb20vZW1iZWQvODU4YTkzOGY5Yjg5OGM5Mzg3OTk4Mzg4OTM4Nzk4ODg4NTk0Lmh0bWw=" target="_blank">TV<span>Calidad 720p</span></a></li>
 </ul>
